fixed z-index timeline icon in mobile screens

--- a/style/style.css
+++ b/style/style.css
@@ -470,6 +470,7 @@ footer {
   .left-container img,
   .right-container img {
     left: 10px;
+    z-index: 9;
   }
 
   .left-container-arrow,
